1/1.13/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project07-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project07
  template:
    metadata:
      labels:
        app: project07
    spec:
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: project07-claim
      containers:
        - name: project07
          image: fajouianas/devops-with-kubernetes:1.13
          volumeMounts:
          - name: cache
            mountPath: /usr/src/app/files
