1/1.13/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project07-svc
spec:
  type: ClusterIP
  selector:
    app: project07
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3002
